@@ -1,1 +1,9 @@
 # WORDLE CLONE
+
+## Linux compilation
+> export PATH\_TO\_FX=path/to/javafx-sdk-22/lib
+>
+> javac --module-path $PATH\_TO\_FX --add-modules javafx.controls main\_file.java
+>
+> java --module-path $PATH\_TO\_FX --add-modules javafx.controls HelloFX
+
